--- a/app/src/main/res/layout/activity_auth.xml
+++ b/app/src/main/res/layout/activity_auth.xml
@@ -23,9 +23,7 @@
         android:layout_marginTop="2dp"
         android:fontFamily="@font/work_sans"
         android:text="@string/open_classrooms"
-        android:textColor="@android:color/black"
-        android:textSize="26sp"
-        android:textStyle="bold"
+        style="@style/authStyle"
         app:layout_constraintBottom_toBottomOf="@id/ic_auth_image"
         app:layout_constraintStart_toEndOf="@id/ic_auth_image"
         app:layout_constraintTop_toTopOf="@id/ic_auth_image"
