--- a/app/src/main/res/values-night/themes.xml
+++ b/app/src/main/res/values-night/themes.xml
@@ -1,4 +1,5 @@
-<resources xmlns:tools="http://schemas.android.com/tools">
+<resources xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
     <!-- Base application theme. -->
     <style name="Theme.OCR" parent="Theme.MaterialComponents.DayNight.NoActionBar.Bridge">
         <!-- Primary brand color. -->
@@ -10,7 +11,67 @@
         <item name="colorSecondaryVariant">@color/teal_200</item>
         <item name="colorOnSecondary">@color/black</item>
         <!-- Status bar color. -->
-        <item name="android:statusBarColor" tools:targetApi="l">?attr/colorPrimaryVariant</item>
+        <item name="android:statusBarColor" tools:targetApi="l">@color/colorSecondaryDark</item>
         <!-- Customize your theme here. -->
     </style>
+
+    <style name="authStyle" parent="Theme.OCR">
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textSize">26sp</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="splashStyle" parent="Theme.OCR">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="bottomNavStyle" parent="Theme.OCR">
+        <item name="backgroundTint">@color/bottomNavDark</item>
+        <item name="background">@color/white</item>
+        <item name="colorPrimary">@color/bottomItemSelected</item>
+    </style>
+
+    <style name="homeHeadersStyle" parent="Theme.OCR">
+        <item name="android:textColor">@color/black</item>
+        <item name="android:fontFamily">@font/work_sans_bold</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">20sp</item>
+    </style>
+
+    <style name="homeSubTextStyle" parent="Theme.OCR">
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="profileHeader" parent="Theme.OCR">
+        <item name="android:textSize">20sp</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="autocompleteTextStyle" parent="Theme.OCR">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/black</item>
+        <item name="android:textColorHint">@color/black</item>
+    </style>
+
+    <style name="searchSubTextStyle" parent="Theme.OCR">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="classroomSelectedStyle" parent="Theme.OCR">
+        <item name="android:textColor">@color/white</item>
+    </style>
+
+    <style name="searchResultHeaderStyle">
+        <item name="android:textSize">17sp</item>
+        <item name="android:textColor">@color/black</item>
+    </style>
+
+    <style name="searchItemStyle">
+        <item name="android:textSize">15sp</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="backgroundTint">@color/black</item>
+        <item name="android:fontFamily">@font/lato_light</item>
+    </style>
+
 </resources>
