--- a/app/src/main/res/layout/activity_splash.xml
+++ b/app/src/main/res/layout/activity_splash.xml
@@ -27,6 +27,7 @@
         android:gravity="center_horizontal"
         android:text="@string/splash_ocr_text"
         android:textSize="20sp"
+        style="@style/splashStyle"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent" />
@@ -37,6 +38,7 @@
         android:fontFamily="@font/lato_light"
         android:text="@string/splash_text"
         android:textSize="11sp"
+        style="@style/splashStyle"
         app:layout_constraintEnd_toEndOf="@id/ocr_splash_text"
         app:layout_constraintStart_toStartOf="@id/ocr_splash_text"
         app:layout_constraintTop_toBottomOf="@id/ocr_splash_text"
