--- a/app/src/main/res/layout/classroom_item_selected_dialog.xml
+++ b/app/src/main/res/layout/classroom_item_selected_dialog.xml
@@ -28,9 +28,7 @@
             android:layout_marginStart="10dp"
             android:layout_marginTop="2dp"
             android:fontFamily="@font/work_sans"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            style="@style/profileHeader"
             app:layout_constraintBottom_toBottomOf="@id/booked_image"
             app:layout_constraintStart_toEndOf="@id/booked_image"
             app:layout_constraintTop_toTopOf="@id/booked_image"
@@ -55,7 +53,7 @@
             android:layout_height="wrap_content"
             android:text="You missed this session"
             android:layout_marginStart="10dp"
-            android:textColor="@color/black"
+            style="@style/classroomSelectedStyle"
             android:fontFamily="@font/work_sans"
             app:layout_constraintHorizontal_bias=".1"
             app:layout_constraintStart_toEndOf="@id/missed_session_img"
@@ -80,7 +78,7 @@
             android:layout_height="wrap_content"
             android:text="Classroom Detail"
             android:layout_marginStart="10dp"
-            android:textColor="@color/black"
+            style="@style/classroomSelectedStyle"
             android:fontFamily="@font/work_sans"
             app:layout_constraintHorizontal_bias=".1"
             app:layout_constraintStart_toEndOf="@id/time_classroom"
@@ -94,7 +92,7 @@
             android:text="Available @"
             android:fontFamily="@font/lato"
             android:textSize="12sp"
-            android:textColor="@color/black"
+            style="@style/classroomSelectedStyle"
             android:layout_marginTop="8dp"
             app:layout_constraintHorizontal_bias=".0"
             app:layout_constraintTop_toBottomOf="@id/classroom_des"
@@ -131,7 +129,7 @@
             android:layout_height="wrap_content"
             android:text="Time remaining"
             android:layout_marginStart="10dp"
-            android:textColor="@color/black"
+            style="@style/classroomSelectedStyle"
             android:fontFamily="@font/work_sans"
             app:layout_constraintHorizontal_bias=".1"
             app:layout_constraintStart_toEndOf="@id/time_remaining_classroom_img"
@@ -145,7 +143,7 @@
             tools:text="Current time:"
             android:fontFamily="@font/lato"
             android:textSize="12sp"
-            android:textColor="@color/black"
+            style="@style/classroomSelectedStyle"
             android:layout_marginTop="8dp"
             app:layout_constraintHorizontal_bias=".0"
             app:layout_constraintTop_toBottomOf="@id/classroom_time_remaining_header"
@@ -170,9 +168,8 @@
             android:text="Send a Message"
             android:layout_marginStart="10dp"
             android:textAllCaps="false"
-            android:textColor="@color/black"
             android:background="@drawable/background_profile_buttons"
-            style="?android:listSeparatorTextViewStyle"
+            style="@style/classroomSelectedStyle"
             android:fontFamily="@font/work_sans"
             app:layout_constraintHorizontal_bias=".1"
             app:layout_constraintStart_toEndOf="@id/send_message_img"
@@ -186,7 +183,7 @@
             android:text="Let other users know you want to\nuse this classroom"
             android:fontFamily="@font/lato"
             android:textSize="12sp"
-            android:textColor="@color/black"
+            style="@style/classroomSelectedStyle"
             android:layout_marginTop="8dp"
             app:layout_constraintHorizontal_bias=".0"
             app:layout_constraintTop_toBottomOf="@id/send_message_header"
