--- a/app/src/main/res/layout/fragment_search.xml
+++ b/app/src/main/res/layout/fragment_search.xml
@@ -28,9 +28,7 @@
             android:layout_marginTop="3dp"
             android:fontFamily="@font/work_sans"
             android:text="@string/search_frag_header_text"
-            android:textColor="@android:color/black"
-            android:textSize="20sp"
-            android:textStyle="bold"
+            style="@style/profileHeader"
             app:layout_constraintBottom_toBottomOf="@id/ic_profile_ocr_image"
             app:layout_constraintStart_toEndOf="@id/ic_profile_ocr_image"
             app:layout_constraintTop_toTopOf="@id/ic_profile_ocr_image"
@@ -51,7 +49,7 @@
             android:hint="@string/search_frag_search_box"
             android:paddingStart="16dp"
             android:paddingEnd="16dp"
-            android:textSize="15sp"
+            style="@style/autocompleteTextStyle"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@id/search_find_classroom" />
 
@@ -98,6 +96,7 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:gravity="center"
+                    style="@style/searchSubTextStyle"
                     android:text="@string/no_search_result_text" />
 
             </androidx.appcompat.widget.LinearLayoutCompat>
