--- a/app/src/main/res/layout/profile_edit.xml
+++ b/app/src/main/res/layout/profile_edit.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="26dp"
+    style="@style/classroomSelectedStyle"
     xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <LinearLayout
